== 1.6.3 Protein Powder
 * Add HTTP 422 status code [rajcybage]
 * Add warning about EM reactor still running when stopping.
 * Remove version number from "Server" HTTP header. [benbasson]
 * Adding `--ssl-disable-verify` to allow disabling of client cert requests when SSL enabled [brucek]
 * Ensure Tempfiles created by a large request are closed and deleted. [Tonkpils]

== 1.6.2 Doc Brown
 * No longer replace response's body on HEAD request. Ensuring body.close will be called.
 * Remove `---ssl-verify` option as EventMachine doesn't verify the certificate.
 * Fix env['rack.peer_cert'] to return SSL certifcate.

== 1.6.1 Death Proof
 * Regression: Default logger to STDOUT when using outside of CLI.
 * Regression: Downgrade Rack required version back to 1.0 to work w/ prior Rails versions.

== 1.6.0 Greek Yogurt
 * Accept absolute URL in request line, eg.: 'GET http://site.com/he/lo HTTP/1.1'.
 * HEAD request no longer return a body in the response.
 * No longer stop EventMachine's reactor loop unless it was started by Thin.
 * Make request env keys upcasing locale-agnostic.
 * Use Ruby's `Logger` for logging. [Akshay Moghe].
   The logger can now be set using `Thin::Logging.logger=`.
   Tracing of request is handled by a second logger, `Thin::Logging.trace_logger=`.
 * Add --threadpool-size option to configure EM's thread pool size (default: 20).
 * Pipelining is no longer supported.

== 1.5.1 Straight Razor
 * Fix issue when running as another user/group without a PID file.
 * Allow overriding Connection & Server response headers.
 * Update vlad example [Mathieu Lemoine]
 * Keep connections in a Hash to speedup deletion [slivu]
 * Force kill using already known pid. Prevents "thin stop" from leaving a process that removed its
   pid file, but is still running (e.g. hung on some at_exit callback) [Michal Kwiatkowski]

== 1.5.0 Knife
 * Fix compilation under Ubuntu 12.04 with -Werror=format-security option.
 * Raise an error when no PID file.