@@ -6,10 +6,6 @@
 #  Created by James Tucker on 2008-06-19.
 #  Copyright 2008 James Tucker <raggi@rubyforge.org>.
 
-# Uncomment if appropriate for you..
-EM.epoll
-# EM.kqueue # bug on OS X in 0.12?
-
 class DeferrableBody
   include EventMachine::Deferrable
   
